--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,109 +1,145 @@
-/* header */
-header{
-    position: relative;
-    background-color: rgb(58, 150, 280);
+
+
+/* --------------------
+ホームページ(index) 
+---------------------*/
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 13vw;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: black;
+    z-index: 1000;
 }
 
+  
+/* header */
+
+header{
+    background-color: #00a3ff;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header_left{
+    margin-left: 30px; 
+}
+
+.header_right{
+    display: flex;
+    margin-right: 10px; 
+    gap: 20px;
+}
+    
+header form{
+    margin: auto;
+} 
+
+
 header img{
-    position: absolute;
-    left: 20px;
-    width: 14vw;
+    width: 6rem;
     height: auto;
   }
 
 header nav{
-    position: absolute;
-    bottom: 20px;
-    left: 20%;
+    align-self:last baseline
 }
 
-header nav a{
-    margin-bottom: 0.5vw;
-    margin-right: 40px; 
-    font-size: 2vw;
-    color: white;
-    text-decoration: none;        
+header ul{
+    display: flex;
+    gap:10px;
+    font-weight: bolder;
+    color: #07079b;
 }
-
-header div{
-    display: none;
-}
-
-.bar {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
-
-
-
 
 .login_botton{
-    position: absolute;
-    right: 3%;
-    bottom: 20px;
-    font-size: 2.5vw;
-    background-color: rgb(234, 224, 224);
-    padding: 20px;
-    cursor: pointer;
+    align-self: center;
+    margin-right: 10px;
+    padding: 20px 8px;
+    background-color: rgb(30, 30, 223);
+    border-radius: 10px;
+    color: white;
+    font-weight:bold;
+    cursor: pointer;    
 }
+
+
 
 .login:hover {
     background-color: #c6cacf;
 }
 
 
+.hamburger_icon,.hamburger_menu{
+    display: none;
+}
 
 
-  
+/* footer */
+
+footer{
+    display: flex; 
+    justify-content: flex-end; 
+    padding: 40px;
+    background-color: #00a3ff;
+}
+
+address{
+    color: white;
+    font-weight: bold;
+    font-style: normal;
+}
 
 
-/*ヘッダー下背景(windowsとmacのロゴ) */
+
+/* ヘッダー下背景画像 */
+
 #img_wiondosMac{
     width: 100%;
     height: auto;
-    display: block;
 }
 
-/* エラーメッセージ */
+
+/* 入力フォームエラーメッセージ */
+
 .form_error{
     color: red;
-    font-size: 30px;
+    font-size:1.5rem;
     margin: 20px 0;
 }
 
 ul{
-    font-size: 16px;
     margin: 0 0 10px 10px;
 }
 
 
+
 /* サービス一覧セクション */
+
 h1{
-    font-size: 3.5rem;
-    color: #5e7fef;
+    font-size: 5vw;
+    color: #1677db;
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: rgb(82, 202, 112);
+    -webkit-text-stroke-color: #b0fce5;
     letter-spacing: 30px;
     font-weight: bold;
     text-align: center;
+    margin-bottom: 70px;
+    margin-top: 30px;
 }
 
 h2{
-    color: #1717be;
-    font-size: 2.2rem;
+    color: #001eb9;
+    font-size: 2rem;
     font-weight: bold;
     margin-top: 40px;
     margin-left: 20px;
-}
-
-.service_section{
-    background-color: white;
-    margin-top: 40px;
 }
 
 table {
@@ -113,22 +149,20 @@ table {
 }
 
 td {
-    border: 2px solid blue; 
+    border: 2px solid #1677db; 
     vertical-align: middle;
     text-align: center;
     margin: 10px;
-    font-size: 2vw;
     padding: 10px;
-  }
+}
   
 th {
-    background-color: #5873e0; 
+    background-color: #1677db; 
     border: 2px solid rgb(255, 255, 255); 
     color: white; 
-    font-size: 2vw;
     padding: 7px;
     font-weight:normal
-  }
+}
   
 table img{
     object-fit: contain; 
@@ -137,65 +171,69 @@ table img{
     max-width: 100%; 
 }
 
+.service_content{
+    text-align: left;
+}
 
-  /* 入力フォームのセクション */
+
+/* 入力フォームセクション */
+
 .form_section{
-    background-color: #4180e5;
-    position: relative;
-    height: 680px;
+    background-color: #1677d7
 }
 
 .form_h2{
     text-align: center;
     color:white;
-    font-size: 45px;
+    font-size: 2.5rem;
     font-weight:normal;
-    padding:20px;
+    padding:60px 0 20px 0;
     margin-bottom: 20px;  
+    margin-left: 0; 
+    margin-right: auto;
+}
+
+.form_section form{
+    display: flex;
+    flex-direction: column;
 }
 
 .form_top{
-    position: absolute; 
-    right:30%;
-    width:60%; 
+    width: 80%;
 }
 
 .input_group {
     display: flex; 
     margin-bottom: 20px; 
-    justify-content: center;
-    height: 35px;
+    height: 30px;
 }
 
-input[type="text"],
-input[type="email"],
-select,
-textarea {
+.form_top input,select,textarea{
     flex: 3; 
 }
 
-label {
+.form_top label {
     flex: 1.5; 
     text-align: center; 
-    min-width: 100px;
     color: white;
-    font-size: 1.5vw;
+    display: flex; 
+    justify-content: right; 
+    margin-right: 30px;
+    align-items: center; 
 }
 
 .form_botton{
-    position: absolute;
-    left: 50%; 
-    transform: translateX(-50%); 
-    bottom:15px;
-    font-size: 3.5vw;
+    margin: 0 auto; 
+    margin-top: 200px;
+    font-size: 1.1rem;
     padding: 10px 80px; 
     cursor: pointer; 
     background-color: #9fabdc;
     border-radius: 20px; 
     color: white;
     border: none; 
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);    
-    z-index: 1000;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);   
+    margin-bottom: 50px; 
 }
 
 #message{
@@ -210,60 +248,56 @@ label {
 }
 
 
-/* footer */
-footer{
-    position: relative;
-    background-color: #34b3f4;
-    height: 150px;
-}
-
-address{
-    position: absolute;
-    top: 40px;
-    right: 40px;
-    font-size: 20px;
-    color: white;
-    font-weight: bold;
-    font-style: normal;
-}
 
 
-/* mail関連ページ */
-
+/* --------------------
+メール関連ページ（confirm,conplete)
+---------------------*/
 
 .mail_h2{
     margin-bottom: 20px;
 }
 
 .mail_p{
-    font-size: 20px;
     margin: 10px;
+    line-height: 1.5;
 }
 
 .mail_button{
-        display: inline-block;
-        font-size: 16px; /* フォントサイズ */
-        cursor: pointer;
-        background-color: rgb(199, 206, 232);
-        padding: 10px 20px;
-        border-width: 2px;
-        border-style: solid;
-        border-color: rgb(0, 0, 0);
-        margin: 10px;
-        line-height: normal; 
-        border-radius: 5px; 
-    }
+    display: inline-block;
+    font-size: 0.8rem; 
+    cursor: pointer;
+    background-color: rgb(235, 231, 231);
+    padding: 7px 12px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(112, 111, 111);
+    margin: 10px 0 10px 15px;
+    line-height: normal; 
+    border-radius: 5px; 
+}
+
+#mailSubmit_button{
+    background-color: rgb(17, 124, 211);
+    border-color: rgb(17, 124, 211);
+    color: white;
+}
     
 
 
-/* 管理ページ */
+
+
+/* --------------------
+管理ページ(manage)
+---------------------*/
+
 .manage_table {
     width: 95%;
     border-collapse: collapse
 }
 
 .td_button{
-    padding: 3px;
+    padding: 0px;
 }
 
 .grayBack_thin,.grayBack_thick{
@@ -273,7 +307,6 @@ address{
     width: 100%; 
     box-sizing: border-box; 
     height: 60px;
-    font-size: 20px;
 }
 
 .grayBack_thick{
@@ -282,78 +315,80 @@ address{
 }
 
 .grayBack_botton,.grayBack_botton_edit{
+    background-color: #b1aeae; 
+    border: 1px solid #ddd; 
+    width: 80%; 
+    box-sizing: border-box; 
+    height: 50px;
+    border-radius: 10px; 
+    cursor: pointer;
+    font-weight: bolder;
+    color: black;
+}
+
+.upload_btn{
     background-color: #dbd8d8; 
     border: 1px solid #ddd; 
-    padding: 8px; 
     width: 95%; 
+    padding: 0 5px;
     box-sizing: border-box; 
     height: 80px;
     border-radius: 10px; 
     cursor: pointer;
+    color: black;
+    font-size: 0.8rem;
 }
 
-.grayBack_botton_edit{
-    display: inline-block;
-    font-size: 1.6vw;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    width: 95%;
-    height: 5vw;
+.upload_button_responsive{
+    display: none;
 }
 
-span{
-    background-color: #dbd8d8; 
-    padding: 30px; 
+#exist_img{
     width: 100%; 
-    font-size: 2vw;
-    margin: 0;
+    font-size: 0.8rem;
     white-space: nowrap; 
-    overflow: hidden; 
     text-overflow: ellipsis; 
 }
 
 
 
 
-/* サービステーブル操作関連ページ*/
+/* --------------------
+サービス関連ページ(edit,edit_complete,delete_comlpete,resistration_complete)
+---------------------*/
+
 .service_button{
-    background-color: #cfcbcb; /* 灰色の背景色 */
-    padding: 20px; /* 内側の余白を設定 */
+    background-color: #cfcbcb; 
+    padding: 15px; 
     cursor: pointer;
-    font-size: 25px;
+    font-size: 0.9rem;
     display: inline-block;
     margin: 80px 0 40px 40px;
     border-radius: 10px;
 }
 
-.service_text{
-    font-size: 25px;
+.service_p{
+    font-size: 1.5rem;
     margin-left: 40px;
     margin-top: 80px;
 }
 
 .service_h2{
-    font-size: 40px;
     color: #3830da;
     margin-left: 20px;
     font-weight: bold;
     margin-top: 20px;
 }
 
-.display header a{
- display: none
-}
 
 
 
 
-
-/* ログイン画面 */
-
+/* --------------------
+ログインページ(login)
+---------------------*/
 
 .login_h2{
-    font-size: 2.5rem;
     margin-top: 20px;
     text-align: center;
     margin-bottom: 20px;
@@ -362,25 +397,27 @@ span{
 .login_container {
     display: flex;
     align-items: center; 
-    width:55%;
+    width:50%;
     margin-left: auto; 
     margin-right: auto; 
     gap: 30px;
 }
 
+.login_container table {
+    flex: 5;
+}
+
 .login_container th {
     background-color: rgb(87, 119, 222);
-    color: white; /* 文字色を白に */
+    color: white; 
     padding: 13px 0;
     vertical-align: middle;
-    font-size: 2vw;
-    width: 40%;
+    width: 30%;
 }
 
 .login_container td {
-    font-size: 2vw;
     padding: 0; 
-    width: 60%;
+    width: 70%;
     border: 1.5px solid rgb(87, 119, 222); 
 }
 
@@ -398,16 +435,16 @@ span{
 }
 
 .login_container button{
-    align-self:flex-start;
-    margin-top: 40px;
+    flex: 1;
+    align-self:flex-end;
+    margin-bottom: 40px;
     background-color: #dbd8d8; 
     border: 1px solid #ddd; 
-    font-size: 2vw;
-    height: 10vw;
-    width: 10vw;
+    font-size: 0.9rem;
+    padding: 20px 0;
     border-radius: 10px; 
     cursor: pointer;
-    font-weight:500;
+    font-weight: bolder;
 }
   
 
