--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,318 +1,401 @@
 @media (max-width: 780px){
 
+/* --------------------
+ホームページ(index) 
+---------------------*/
 
 /* header */
-header{
-    height: 60px;
+
+.header_left{
+    margin-left: 5px; 
 }
 
+.header_right{
+    margin-right:0; 
+    gap: 0;
+}
+    
 header img{
-    width: 50px;
-    top: 5px;
-}
+    height: 50px;
+    width: auto;
+  }
 
-header div{
-    bottom: 5px;
-}
-
-header div a{
-    margin-right: 10px; 
-    font-size: 14px;   
-}
-
-.login_botton{
-position: absolute;
-right: 15%;
-bottom: 10px;
-font-size: 14px;
-padding: 10px;
-vertical-align: middle;
-color: #000;
-}
-
-#button_right{
-    right: 5%;
-}
-
-header nav{
+.header_right nav{
     display:none;
 }
 
-header div {
+.hamburger_icon {
     display: block;
+    width: 50px;
+    height: 50px;
+    background-color: #b0aeaf;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+    position: relative;
 }
 
-.nav-menu {
-    display: none;
-    position: absolute; 
-    background-color: rgba(0, 0, 255, 0.3);
-    width: 60%; 
-    bottom: -36px; 
-    right: 0; 
-    z-index: 100; 
-    padding: 10px 0;
-    text-align: center;
+.bar {
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+    margin: 2px 0;
+    transition: 0.4s;
   }
 
-.hamburger-menu{
-    position: absolute;
-    vertical-align: middle;
-    right: 2%;
-    top: 25%
+.hamburger_menu {
+    background-color: rgba(0, 120, 255, 0.5);
+    top:60px;
+    position: absolute; 
+    top: 50px; 
+    right:0;
+    width: 120px;
+    height: 60px;
+    display: none;
+}
+
+.hamburger_menu.visible {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding-right: 10px;
+    padding-top: 10px;
+    line-height: 1.5;
+}
+
+.hamburger_menu a{
+    color: white;
+    margin-right: 0;
+}
+
+.login_botton{
+    font-size: 0.6rem;
+    padding: 0;
+    margin: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 0;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
 }
 
 
+/* footer */
 
-/*ヘッダー下背景(windowsとmacのロゴ) */
-#img_wiondosMac{
-    bottom: 14px;
+footer{
+    justify-content: flex-end ;
+    padding: 20px;
 }
 
-
-/* エラーメッセージ */
-.form_error{
-    color: red;
-    font-size: 18px;
-    margin: 10px 0;
+address{
+    font-size: 0.6rem;
 }
-
-ul{
-    font-size: 12px;
-    margin-bottom: 10px;
-}
-
 
 
 /* サービス一覧セクション */
 
 h1{
-    font-size: 30px;
     letter-spacing: 5px;
-    text-align: center;
-    color: #5e7fef;
+    font-size: 6vw;
+    margin-bottom: 30px;
+    -webkit-text-stroke-width: 1px;
 }
 
 h2{
-    font-size: 20px;
-    top: 60px;
+    font-size: 1.2rem;
+    top: 30px;
     left: 10px;
 }
 
-table {
-    margin: 20px auto;
-    top:120px;
-    width: 95%;
-    border-collapse: collapse
+.service_table, .service_table tbody, .service_table th, .service_table td, .service_table tr {
+    display: block;
 }
 
-table img{
-    width: 50px;
-    height: auto;
+.service_table th{
+display: none;
 }
 
-td {
-    border: 2px solid blue; 
-    text-align: center; 
-    padding: 5px;
-    font-size: 3vw;
+.service_table tr {
+margin-bottom: 10px;
 }
 
-th {
-    background-color: #5873e0; 
-    border: 1px solid rgb(255, 255, 255); 
-    color: white; 
-    padding: 5px;
-    font-size: 2.5vw;
+.service_table td { /*セル*/
+text-align: right;
+position: relative;
+display: flex;
+flex-direction: column;
+margin: -2px;
 }
 
-table img{
-    margin-top: 10px;
+.service_table td:before { /*セルのラベル*/
+content: attr(data-label);
+width: 50%;
+font-weight: bold;
+text-align: left;
+margin-bottom: 20px;
+color: #3232a0;
 }
 
+.service_table p{  /*セルの内容(文章)*/
+    text-align: left;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
 
-/* 入力フォームのセクション */
+.service_table img{ /*セルの内容(画像)*/
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+.td_top{
+    background-color: #6e99ca;
+    font-weight: bold;
+}
+
+.td_top p{
+    text-align: center;
+    font-size: 1.1rem;
+} 
+
+
+/* 入力フォームセクション */
 
 .form_section{
     background-color: #4180e5;
-    position: relative;
-    height: 400px;
-}
-
-#form{
-    height: 380px;
+    height: 500px;
 }
 
 .form_h2{
-    font-size: 16px;
+    padding:30px 0 20px 0;
+    margin-bottom: 20px;  
+    font-size: 2rem;
 }
 
+
 .form_top{
-    right:10%;
-    width: 90%; 
+    width: 80%;
+    margin: 0 auto;
 }
 
 .input_group {
-    height: 20px;
+    display: flex; 
+    flex-direction: column;
+    margin-bottom: 20px; 
+
 }
 
-#message{
-    height: 100px;
-}
-
-#first_select{
-    font-size: 10px;
-}
-
-label {
-    font-size: 11px;
+.form_top label {
+    justify-content: left; 
+    margin-right: 0px;
 }
 
 .form_botton{
-    position: absolute;
-    left: 50%; 
-    transform: translateX(-50%); 
-    bottom:7px;
-    font-size: 12px;
-    padding: 6px 50px; 
-    cursor: pointer; 
-    background-color: #9fabdc;
-    border-radius: 20px; 
-    color: white;
-    border: none; 
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);    
-    z-index: 1000;
+    margin: 0 auto; 
+    margin-top: 90px;
+    font-size: 1rem;
+    padding: 5px 40px; 
+    margin-bottom: 10px; 
 }
 
-
-/* 空白（白背景)のセクション */
-.white_section{
-    height: 30px;
-}
-
-/* footer */
-
-footer{
-    height: 80px;
-}
-
-address{
-    font-size: 9px;
-    left: 50%;
-    top: 20px;
-    transform: translateX(-50%);
-    text-align: center;
+#message{
+    flex-grow: 3;
+    min-height: 100px;
 }
 
 
 
-/* メール関連ページ */
+
+/* --------------------
+メール関連ページ（confirm,conplete)
+---------------------*/
+
+
 .mail_h2{
-    font-size: 18px;
-    color: #1717be;
-    padding: 10px;
+    margin-bottom: 20px;
+    margin-left: 0;
     text-align: center;
 }
 
 .mail_p{
-    font-size: 12px;
     margin: 10px;
+    line-height: 1.5;
+    font-size: 0.9rem;
 }
 
 .mail_button{
-    display: inline-block; 
-    padding: 5px 10px; 
-    font-size: 10px; 
-    border: 2px solid #000; 
-    background-color: #fff; 
+    display: inline-block;
+    font-size: 0.8rem; /* フォントサイズ */
     cursor: pointer;
-    outline: none; 
-    background-color: #c7cee8;
-    margin: 10px;
-    color: #000;
-    font-weight: 300;
+    background-color: rgb(235, 231, 231);
+    padding: 7px 12px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(112, 111, 111);
+    margin: 10px 0 10px 15px;
+    line-height: normal; 
+    border-radius: 5px; 
+}
+
+#mailSubmit_button{
+    background-color: rgb(17, 124, 211);
+    border-color: rgb(17, 124, 211);
+    color: white;
+}
+
+.mail_buttons {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
 }
 
 
-/* 管理ページ */
 
-.grayBack_thin,.grayBack_thick{
-    height: 20px;
-    font-size: 2vw;
+
+/* --------------------
+管理ページ(manage)
+---------------------*/
+
+/* テーブル構造の変更 */
+.manage_table, .manage_table tbody, .manage_table th, .managetable td, .manage_table tr {
+    display: block;
 }
 
-.grayBack_thick{
-    height: 40px;
+.manage_table{
+    width: 90%;
 }
 
-.grayBack_botton{
-    height: 40px;
-    color: #000;
+.manage_table th{
+display: none;
 }
 
-.grayBack_botton_edit{
-    height:20px;
-    padding: 5px;
-    font-size: 1.5vw;
-    color: #000;
+.manage_table tr {
+margin-bottom: 20px;
 }
 
-span{
+.manage_table td { /*セル*/
+position: relative;
+display: flex;
+flex-direction: column;
+margin: -2px;
+}
+
+.manage_table td:before { /*セルのラベル*/
+content: attr(data-label);
+width: 50%;
+font-weight: bold;
+text-align: left;
+margin-bottom: 10px;
+color: #07079b;
+}
+
+.manage_table p{  /*セルの内容(文章)*/
+    text-align: left;
+    margin-left: 15px;
+}
+
+.manage_table img{ /*セルの内容(画像)*/
+    margin: auto;
+}
+
+
+/* その他要素の編集 */
+
+.td_top p{
+    text-align: center;
+} 
+
+#exist_img{
+    text-align: center;
+    margin: 30px auto;
+}
+
+.upload_btn{
     background-color: #dbd8d8; 
-    padding: 4px;
-    font-size: 9px;
-}
-
-.apload_btn{
-    background-color: #f0f0f0; 
     border: 1px solid #ddd; 
-    padding: 0 2px; 
-    width: 100%; 
+    width: 95%; 
+    padding: 0 5px;
     box-sizing: border-box; 
-    color: #000;
+    height: 80px;
     border-radius: 10px; 
     cursor: pointer;
-    font-size: 1.5vw;
+    color: black;
+    font-size: 0.8rem;
+}
+
+.upload_button_responsive{
+    display: block;
+    text-align: left;
 }
 
 .td_button{
-    padding: 1px;
+    padding: 0;
+    margin: auto;
 }
 
+.grayBack_thin,.grayBack_thick{
+    background-color: #dbd8d8; 
+    border: 1px solid #ddd; 
+    padding: 8px; 
+    width: 100%; 
+    box-sizing: border-box; 
+    height: 30px;
+}
 
-/* その他サービステーブル関連ページ */
-.service_button{
-    background-color: #cfcbcb; 
-    padding: 10px; 
+.grayBack_thick{
+    height: 60px;
+    vertical-align: top;
+}
+
+.grayBack_botton,.grayBack_botton_edit{
+    background-color: #b1aeae; 
+    border: 1px solid #ddd; 
+    width: 50%; 
+    box-sizing: border-box; 
+    height: 30px;
+    border-radius: 10px; 
     cursor: pointer;
-    font-size: 12px;
-    display: inline-block;
-    margin: 20px 0 40px 40px;
-    border-radius: 10px;
+    font-weight: bolder;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
 }
 
-.service_text{
-    font-size: 12px;
-    margin-left: 40px;
-    margin-top: 20px;
-}
+
+
+/* --------------------
+サービス関連ページ(edit,edit_done,delete_done,resistration_done
+---------------------*/
 
 .service_h2{
-    font-size: 25px;
-    color: #3830da;
-    margin-left: 20px;
-    font-weight: bold;
-    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 0;
+    text-align: center;
 }
 
-.display header a{
-display: none
+.service_p {
+    margin: 10px;
+    line-height: 1.5;
+    font-size: 0.9rem;
+}
+
+.service_button_container{
+    text-align: center;
+}
+
+.service_button{
+    padding: 15px; 
+    font-size: 0.9rem;
+    margin: 20px 20px;
+    display: inline-block;
+    text-align: center;
 }
 
 
-
-
-/* ログイン画面 */
-
+/* --------------------
+ログインページ(login)
+---------------------*/
 
 .login_h2{
     font-size: 20px;
@@ -321,13 +404,14 @@ display: none
 }
 
 .login_container {
+    flex-direction: column;
     width:90%;
     gap: 10px;
 }
 
 .login_container th {
     font-size: 2.2vw;
-    width: 40%;
+    width: 30%;
     padding:5px;
 }
 
@@ -338,6 +422,7 @@ display: none
 
 .login_container table {
     border-spacing: 0 5px; 
+    margin-bottom: 10px;
 }
 
 .login_container input{
@@ -345,11 +430,12 @@ display: none
 }
 
 .login_container button{
-    font-size: 10px;
-    height: 30px;
-    width: 60px;
-    color: #000;
-    border: 1px solid black; 
+    align-self:center;
+    margin-bottom: 10px;
+    background-color: #dbd8d8; 
+    border: 1px solid #ddd; 
+    font-size: 0.8rem;
+    padding: 5px 50px;
+    border-radius: 10px; 
 }
-  
 }
